--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-eqiv="X-UA_compatible" contnt="IE=edge">
+    <meta http-eqiv="X-UA-compatible" contnt="IE=edge">
     <meta name="viewport" content="weidth-device-width, initial-scale=1.0">
     <title>BMI Calculator </title>
     <link rel="stylesheet" href="style.css">
@@ -11,18 +11,19 @@
     <div class="image-container">
     <img src="/image/yoga.jpg" alt="Girl in a jacket" style="width:500px;height:600px;">
 </div>
-
-    <div> 
-       
-    <h2>BMI CALCULATOR</h2>
+ <div> 
+       <h2>BMI CALCULATOR</h2>
     <p class="text">Height</p>
     <input type="text" id="height">
     <p class="text">Weight</p>
     <input type="text" id="weight">
+    <p class="text">Age</p>
+    <input type="text" id="age">
+    <p class="text">Gender</p>
+    <input type="text" id="gender">
     <p id="result"></p>
     <button id ="btn" onClick="bmi()">Calculate</button>
     <p id="info">Please enter height in [cm] and weight [kg]</p>
-    
      </div> 
 </body>
 <script>
