--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div id="chatbot-icon" onclick="toggleChatbot()">
-            <img src="/image/chat.png" alt="Chatbot Icon" />
+            <img src="./image/chat.png" alt="Chatbot Icon" />
         </div>
 
         <div id="chatbot-container">
